--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -199,6 +199,9 @@
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Zombie.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityFactory.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\chunk\DataLayer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\ContainerListener.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ContainerMenu.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\Slot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -341,6 +344,10 @@
     <ClInclude Include="$(MC_ROOT)\source\world\level\levelgen\chunk\DataLayer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\TileChange.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\LevelEvent.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\Container.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\ContainerListener.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ContainerMenu.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\Slot.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NBT\NBT.vcxproj">
