--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -202,6 +202,11 @@
     <ClCompile Include="$(MC_ROOT)\source\world\ContainerListener.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\ContainerMenu.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\Slot.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\inventory\ArmorSlot.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\inventory\CraftingContainer.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\inventory\InventoryMenu.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\inventory\ResultContainer.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\inventory\ResultSlot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -348,6 +353,11 @@
     <ClInclude Include="$(MC_ROOT)\source\world\ContainerListener.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\ContainerMenu.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\Slot.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\inventory\ArmorSlot.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\inventory\CraftingContainer.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\inventory\InventoryMenu.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\inventory\ResultContainer.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\inventory\ResultSlot.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NBT\NBT.vcxproj">
