fixes and more fixes renamed `ItemInstance` to `ItemStack`

--- a/platforms/windows/projects/World/World.vcxproj.filters
+++ b/platforms/windows/projects/World/World.vcxproj.filters
@@ -149,7 +149,7 @@
     <ClCompile Include="$(MC_ROOT)\source\world\item\Item.cpp">
       <Filter>Source Files\Item</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\world\item\ItemInstance.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\world\item\ItemStack.cpp">
       <Filter>Source Files\Item</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\world\item\SlabItem.cpp">
@@ -575,20 +575,26 @@
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\Slot.cpp">
       <Filter>Source Files\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\world\inventory\InventoryMenu.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\InventoryMenu.cpp">
       <Filter>Source Files\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\world\inventory\ResultContainer.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ResultContainer.cpp">
       <Filter>Source Files\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\world\inventory\CraftingContainer.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\CraftingContainer.cpp">
       <Filter>Source Files\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\world\inventory\ArmorSlot.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ArmorSlot.cpp">
       <Filter>Source Files\Inventory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\world\inventory\ResultSlot.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ResultSlot.cpp">
       <Filter>Source Files\Inventory</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\CompoundContainer.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -640,7 +646,7 @@
     <ClInclude Include="$(MC_ROOT)\source\world\item\Item.hpp">
       <Filter>Header Files\Item</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\world\item\ItemInstance.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\world\item\ItemStack.hpp">
       <Filter>Header Files\Item</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\world\item\SlabItem.hpp">
@@ -1024,19 +1030,25 @@
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\Slot.hpp">
       <Filter>Header Files\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\world\inventory\InventoryMenu.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\InventoryMenu.hpp">
       <Filter>Header Files\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\world\inventory\ResultContainer.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ResultContainer.hpp">
       <Filter>Header Files\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\world\inventory\CraftingContainer.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\CraftingContainer.hpp">
       <Filter>Header Files\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\world\inventory\ResultSlot.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ResultSlot.hpp">
       <Filter>Header Files\Inventory</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\world\inventory\ArmorSlot.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ArmorSlot.hpp">
+      <Filter>Header Files\Inventory</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\CompoundContainer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.hpp">
       <Filter>Header Files\Inventory</Filter>
     </ClInclude>
   </ItemGroup>
