--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -61,7 +61,7 @@
     <ClCompile Include="$(MC_ROOT)\source\world\item\DoorItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\Inventory.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\Item.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\world\item\ItemInstance.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\item\ItemStack.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\TileItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\TilePlanterItem.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\item\RocketItem.cpp" />
@@ -202,11 +202,13 @@
     <ClCompile Include="$(MC_ROOT)\source\world\ContainerListener.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\ContainerMenu.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\Slot.cpp" />
-    <ClCompile Include="..\..\..\..\source\world\inventory\ArmorSlot.cpp" />
-    <ClCompile Include="..\..\..\..\source\world\inventory\CraftingContainer.cpp" />
-    <ClCompile Include="..\..\..\..\source\world\inventory\InventoryMenu.cpp" />
-    <ClCompile Include="..\..\..\..\source\world\inventory\ResultContainer.cpp" />
-    <ClCompile Include="..\..\..\..\source\world\inventory\ResultSlot.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ArmorSlot.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\CraftingContainer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\InventoryMenu.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ResultContainer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\ResultSlot.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\CompoundContainer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -226,7 +228,7 @@
     <ClInclude Include="$(MC_ROOT)\source\world\item\DoorItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\Inventory.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\Item.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\world\item\ItemInstance.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\item\ItemStack.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\TileItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\TilePlanterItem.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\item\RocketItem.hpp" />
@@ -353,11 +355,13 @@
     <ClInclude Include="$(MC_ROOT)\source\world\ContainerListener.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\ContainerMenu.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\inventory\Slot.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\inventory\ArmorSlot.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\inventory\CraftingContainer.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\inventory\InventoryMenu.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\inventory\ResultContainer.hpp" />
-    <ClInclude Include="..\..\..\..\source\world\inventory\ResultSlot.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ArmorSlot.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\CraftingContainer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\InventoryMenu.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ResultContainer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\ResultSlot.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\CompoundContainer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NBT\NBT.vcxproj">
