--- a/platforms/windows/projects/World/World.vcxproj.filters
+++ b/platforms/windows/projects/World/World.vcxproj.filters
@@ -591,7 +591,7 @@
       <Filter>Source Files\Inventory</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\world\inventory\SimpleContainer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Inventory</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\world\CompoundContainer.cpp">
       <Filter>Source Files</Filter>
