--- a/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj
+++ b/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj
@@ -37,36 +37,26 @@
   <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(MC_ROOT)\platforms\sound\directsound;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MC_ROOT)\platforms\audio\directsound;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-    </Link>
-  </ItemDefinitionGroup>
-  <!-- The DXSDK_DIR stuff is needed for DirectSound's dxguid.lib -->
-  <ItemDefinitionGroup Condition="'$(Platform)'=='Win32'">
-    <Link>
-      <AdditionalLibraryDirectories>$(DXSDK_DIR)\Lib\x86;$(DXSDK_DIR)\Lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-    </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Platform)'=='x64'">
-    <Link>
-      <AdditionalLibraryDirectories>$(DXSDK_DIR)\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\platforms\windows\AppPlatform_win32.hpp" />
     <ClInclude Include="$(MC_ROOT)\platforms\windows\LoggerWin32.hpp" />
     <ClInclude Include="$(MC_ROOT)\platforms\windows\resource.h" />
-    <ClInclude Include="$(MC_ROOT)\platforms\sound\directsound\CustomSoundSystem.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\platforms\windows\AppPlatform_win32.cpp" />
     <ClCompile Include="$(MC_ROOT)\platforms\windows\LoggerWin32.cpp" />
     <ClCompile Include="$(MC_ROOT)\platforms\windows\main.cpp" />
-    <ClCompile Include="$(MC_ROOT)\platforms\sound\directsound\SoundSystemDS.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Audio.DirectSound\Audio.DirectSound.vcxproj">
+      <Project>{086cc896-30bb-4539-832b-4c4add16a243}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Client\Client.vcxproj">
       <Project>{a6e03dca-99f6-45b8-800d-73060ae407fc}</Project>
     </ProjectReference>
