--- a/platforms/windows/projects/Audio.XAudio2/Audio.XAudio2.vcxproj.filters
+++ b/platforms/windows/projects/Audio.XAudio2/Audio.XAudio2.vcxproj.filters
@@ -2,24 +2,27 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{C42DA6D7-5E54-4477-B960-197E6F599DB5}</UniqueIdentifier>
+      <UniqueIdentifier>{D58F228C-BDA4-47C9-BF64-898157EF2E3D}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{5D1DB960-EB2F-4C8B-A91B-94581E4D8AEF}</UniqueIdentifier>
+      <UniqueIdentifier>{39D3CFCD-B822-4756-8667-A8E8892D674A}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="$(MC_ROOT)\platforms\xdk360\AppPlatform_xdk360.hpp">
+    <ClInclude Include="$(MC_ROOT)\platforms\audio\xaudio2\CustomSoundSystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\audio\xaudio2\SoundStreamXA2.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(MC_ROOT)\platforms\xdk360\AppPlatform_xdk360.cpp">
+    <ClCompile Include="$(MC_ROOT)\platforms\audio\xaudio2\SoundSystemXA2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\platforms\xdk360\main.cpp">
+    <ClCompile Include="..\..\..\audio\xaudio2\SoundStreamXA2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
