--- a/platforms/sdl/sdl2/CMakeLists.txt
+++ b/platforms/sdl/sdl2/CMakeLists.txt
@@ -90,6 +90,6 @@ if(NINTENDO_SWITCH)
 
     nx_create_nro(reminecraftpe
         NACP reminecraftpe.nacp
-        ICON "../../../game/assets/icon.jpg"
+        ICON "${MC_ROOT}/game/assets/icon.jpg"
     )
 endif()
