Nintendo Switch Support (#295)

--- a/platforms/audio/openal/CMakeLists.txt
+++ b/platforms/audio/openal/CMakeLists.txt
@@ -25,6 +25,9 @@ elseif(EMSCRIPTEN)
 elseif(APPLE)
     # Use System OpenAL Framework
     target_link_libraries(reminecraftpe-audio PUBLIC "-framework OpenAL")
+elseif(NINTENDO_SWITCH)
+    # Use devkitpro's OpenAL
+    target_link_libraries(reminecraftpe-audio PUBLIC openal)
 else()
     # Use System OpenAL
     find_package(OpenAL REQUIRED)
